# cruise-llm

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/core/: conversation.mdx  cost-tracking.mdx  history-persistence.mdx  json-output.mdx  model-selection.mdx  multimodal.mdx  overview.mdx  templates-and-batch.mdx  tool-calling.mdx
docs/src/content/docs/evaluation/: compare-models.mdx  grid-search.mdx  pairwise-evaluate.mdx
docs/src/content/docs/getting-started/: installation.mdx  quickstart.mdx
docs/src/content/docs/reference/: markdown-output.mdx  model-rankings.mdx  transforms-catalog.mdx
docs/src/content/docs/research/: directional-exploration.mdx  language-transform.mdx  overview.mdx  prompt-probe.mdx  prompt-transforms.mdx  research-tree.mdx
docs/src/styles/: custom.css
scripts/: aa_to_litellm_map.json  build_rankings.py  reasoning_config.json  staged_rankings_2026-02-06.json  staged_rankings_2026-03-13.json  static_rankings.py  test_run_batch.py
src/cruise-llm/: LLM.py  __init__.py
src/cruise_llm/: LLM.py  __init__.py  compare_models.py  evaluate.py  generator_tools.py  prompt_probe.py  prompt_search.py  prompt_space.py  rankings.py  utils.py
src/cruise_llm/rankings/: litellm_rankings.json  static_rankings.py  static_rankings_2025-12-19.json  static_rankings_2026-01-21.json  static_rankings_2026-02-06.json
src/spaceshift/: LLM.py  __init__.py  autoprompt.py  cli.py  compare_models.py  evaluate.py  grid_search.py  prompt_space.py  viewer.py
src/spaceshift/prompt_transforms/: user_profile.json
src/spaceshift/rankings/: static_rankings_2025-12-19.json  static_rankings_2026-02-06.json  static_rankings_2026-03-13.json
tests/: test_category_models.py  test_evaluate.py  test_llm.py  test_research.py
