[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cruise-llm"
version = "0.1.0"
description = "PLACEHOLDER: Add project description"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "PLACEHOLDER", email = "PLACEHOLDER@example.com" },
]
keywords = ["llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm",
    "python-dotenv",
    "function-schema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/PLACEHOLDER/cruise-llm"
Repository = "https://github.com/PLACEHOLDER/cruise-llm"

[tool.hatch.build.targets.wheel]
packages = ["src/cruise_llm"]

