[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cruise-llm"
version = "0.1.3"
description = "The fastest way to build, chain, and reuse LLM agents and flows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Deep Pulusani", email = "deep.pulusani@gmail.com" },
]
keywords = ["llm", "ai", "agents", "langchain", "openai", "anthropic", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "litellm",
    "python-dotenv",
    "function-schema",
    "rapidfuzz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/sdeep27/cruise-llm"
Repository = "https://github.com/sdeep27/cruise-llm"

[tool.hatch.build]
include = [
    "src/cruise_llm/**/*.py",
    "src/cruise_llm/**/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cruise_llm"]

